# BrickInvaders

./: .gitignore  README.md  brickinvaders.cabal  todos.xlsx
app/: Data.hs  GameHandler.hs  Main.hs  UI.hs
test/: BrickinvaderTest.hs
