cabal-version:      2.4
name:               brickinvaders
version:            0.1.0.0

executable brickinvaders
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    main-is:          Main.hs
    other-modules:    UI, Data, GameHandler
    hs-source-dirs:   app
    build-depends:    base ^>=4.14.1.0
                    , brick
                    , extra
                    , linear
                    , vty
                    , containers
                    , lens

Test-Suite brickinvaders-test
    default-language: Haskell2010
    ghc-options:      -Wall
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, app
    main-is:          BrickinvaderTest.hs
    other-modules:    GameHandler, Data
    build-depends:    base ^>=4.14.1.0
                    , linear
                    , vty
                    , lens
                    , tasty >= 1.3
                    , tasty-hunit 
